--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,17 @@ body {
   line-height: 1.7;
   -webkit-font-smoothing: antialiased;
   width: 100%;
+  cursor: url('data:image/svg+xml;utf8,<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="9" stroke="white" stroke-width="1.5"/></svg>') 12 12, auto;
+}
+
+a,
+button,
+[role="button"],
+input,
+select,
+textarea,
+label {
+  cursor: url('data:image/svg+xml;utf8,<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="9" stroke="white" stroke-width="1.5"/><circle cx="12" cy="12" r="3" fill="white"/></svg>') 12 12, pointer;
 }
 
 a {
